# kneed

./: .gitignore  .travis.yml  CITATION.cff  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  codecov.yml  mkdocs.yml  postBuild  pyproject.toml  pytest.ini  readthedocs.yaml  requirements.txt  setup.cfg  setup.py  travis.yml
.github/workflows/: pythonpublish.yml  tests.yml
docs/: api.md  api.rst  changelog.md  conf.py  contributing.md  getting-started.md  index.md  index.rst  interactive.rst  parameters.rst  requirements.txt
docs/examples/: custom-data.md  kmeans-elbow.md  pca-components.md
docs/user-guide/: curve-types.md  find-shape.md  multi-knee.md  parameters.md  troubleshooting.md
kneed/: __init__.py  data_generator.py  knee_locator.py  shape_detector.py
notebooks/: decreasing_function_walkthrough.ipynb  kneedle_algorithm.ipynb  kneedle_data.csv  select_k_clusters.ipynb  walkthrough.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  kneedle_algorithm-checkpoint.ipynb  walkthrough-checkpoint.ipynb
tests/: CONTRIBUTING.md  requirements.txt  test_no_matplotlib.py  test_sample.py
