[bdist_wheel]
universal=1

[metadata]
name = kneed
version = file: kneed/VERSION
author = Kevin Arvai
author_email = arvkevi@gmail.com
url = https://github.com/arvkevi/kneed
description = Knee-point detection in Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
  knee-detection system
requires_python = >=3.5
license = BSD
license_files = LICENSE
maintainer = Kevin Arvai

classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering :: Information Analysis
  Programming Language :: Python :: 3

[options]
packages = kneed
install_requires = file: requirements.txt

[options.extras_require]
plot = matplotlib>=2.2.5
testing =
  pytest>=5.0.1
  pytest-cov>=3.0.0
  matplotlib>=2.2.5
